# src/generated/swagger.json
@@ -101,6 +101,16 @@
 							}
 						}
 					},
+					"429": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorResponse"
+								}
+							}
+						}
+					},
 					"500": {
 						"description": "",
 						"content": {
